[gd_scene load_steps=3 format=3 uid="uid://dkm7xvw2q8pnf"]

[ext_resource type="Script" path="res://_ui/inventory_ui.gd" id="1_inv_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.12, 0.15, 0.98)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.35, 1)

[node name="InventoryUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_inv_ui")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(520, 480)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeaderContainer" type="HBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 20
text = "Inventory (0/40)"

[node name="CloseButton" type="Button" parent="CenterContainer/MainPanel/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "X"

[node name="ControlsContainer" type="HBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="FilterLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/ControlsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "Filter:"

[node name="FilterOption" type="OptionButton" parent="CenterContainer/MainPanel/VBoxContainer/ControlsContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="SortButton" type="Button" parent="CenterContainer/MainPanel/VBoxContainer/ControlsContainer"]
layout_mode = 2
text = "Sort: Type"

[node name="Spacer" type="Control" parent="CenterContainer/MainPanel/VBoxContainer/ControlsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/MainPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 8

[node name="SummaryLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_font_sizes/font_size = 12
text = "No items"
horizontal_alignment = 1
